Write nav links copy.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <nav class="desktop">
       
-        <a href="#">Desktop 1</a>
-        <a href="#">Desktop 2</a>
-        <a href="#">Desktop 3</a>
-        <a href="#">Desktop 4</a>
+      <a href="#">Features</a>
+      <a href="#">Mission</a>
+      <a href="#">Support</a>
+      <a href="#">Documentation</a>
       </nav>
       <div class="logopack">
           <img src="img/logo.svg" alt="" class="logo">
@@ -24,10 +24,10 @@
       <nav class="mobile">
         <button>Toggle</button>
         <div>
-          <a href="#">Mobile 1</a>
-          <a href="#">Mobile 2</a>
-          <a href="#">Mobile 3</a>
-          <a href="#">Mobile 4</a>
+          <a href="#">Features</a>
+          <a href="#">Mission</a>
+          <a href="#">Support</a>
+          <a href="#">Documentation</a>
         </div>
       </nav>
   <header class="hero">
