--- a/index.html
+++ b/index.html
@@ -70,7 +70,25 @@
         <img src="img/dot-w.svg" alt="" class="dot dot-aligner">
       </div>
       </aside>
+      <div class="dot-divider">
+        <div class="dot-white">
+          <img src="img/dot-w.svg" alt="" class="dot dd1">
+          <img src="img/dot-w.svg" alt="" class="dot dd2 dot-aligner">
+          <img src="img/dot-w.svg" alt="" class="dot dd3">
+        </div>  
+        <div class="dot-blue">
+            <img src="img/dot-b.svg" alt="" class="dot dd1">
+            <img src="img/dot-b.svg" alt="" class="dot dd2 dot-aligner">
+            <img src="img/dot-b.svg" alt="" class="dot dd3">
+          </div>  
+      </div>
     </header> 
+    <main>
+      <section class="features">
+        <h3 class="head">Features & Usage</h3>
+        <h4 class="subhead">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
+      </section>
+    </main>
       
    
 </body>
