Add markup for Mission section.

--- a/index.html
+++ b/index.html
@@ -86,42 +86,49 @@
       <article class="features">
         <h3 class="head">Features & Usage</h3>
         <h4 class="subhead">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
-      <section class="feature-duo img-left">
-        <img src="img/img-placeholder.png" alt="" class="img-feature">
-        <div class="txt-feature">
-          <h5 class="flag">Test Two Layers at a Time</h5>
-          <p class="txt-flag">Select a text layer and a shape and run Cluse.</p>
-        </div>
-      </section>
-      <section class="feature-duo img-right">
+        <section class="feature-duo img-left">
           <img src="img/img-placeholder.png" alt="" class="img-feature">
           <div class="txt-feature">
-            <h5 class="flag">Adjust Your Color Contrast</h5>
-            <p class="txt-flag">Sometimes that AAA is just a few shades away.</p>
+            <h5 class="flag">Test Two Layers at a Time</h5>
+            <p class="txt-flag">Select a text layer and a shape and run Cluse.</p>
           </div>
-      </section>
-      <section class="feature-duo img-left">
+        </section>
+        <section class="feature-duo img-right">
             <img src="img/img-placeholder.png" alt="" class="img-feature">
             <div class="txt-feature">
-              <h5 class="flag">Live Preview</h5>
-              <p class="txt-flag">Update designs automatically as you adjust your colors.</p>
+              <h5 class="flag">Adjust Your Color Contrast</h5>
+              <p class="txt-flag">Sometimes that AAA is just a few shades away.</p>
             </div>
-      </section>
-      <section class="feature-duo img-right">
-          <img src="img/img-placeholder.png" alt="" class="img-feature">
-          <div class="txt-feature">
-            <h5 class="flag">Font Size Recognition</h5>
-            <p class="txt-flag">Cluse adjusts its WCAG rating based on text size and weight. </p>
-          </div>
-      </section>
-      <section class="feature-duo img-left">
+        </section>
+        <section class="feature-duo img-left">
+              <img src="img/img-placeholder.png" alt="" class="img-feature">
+              <div class="txt-feature">
+                <h5 class="flag">Live Preview</h5>
+                <p class="txt-flag">Update designs automatically as you adjust your colors.</p>
+              </div>
+        </section>
+        <section class="feature-duo img-right">
             <img src="img/img-placeholder.png" alt="" class="img-feature">
             <div class="txt-feature">
-              <h5 class="flag">Easily Revert Back</h5>
-              <p class="txt-flag">Don’t like the new color? Undo and explore more options.</p>
+              <h5 class="flag">Font Size Recognition</h5>
+              <p class="txt-flag">Cluse adjusts its WCAG rating based on text size and weight. </p>
             </div>
-      </section>
+        </section>
+        <section class="feature-duo img-left">
+              <img src="img/img-placeholder.png" alt="" class="img-feature">
+              <div class="txt-feature">
+                <h5 class="flag">Easily Revert Back</h5>
+                <p class="txt-flag">Don’t like the new color? Undo and explore more options.</p>
+              </div>
+        </section>
       </article>
+      <article class="mission">
+        <img src="img/img-dark-placeholder.png" alt="" class="img-mission">
+        <div class="txt-mission">
+          <h3 class="head">Developing Inclusive Design Habits 💎</h3>
+          <h4 class="subhead">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>  
+        </div>
+        </article>
       
    
 </body>
