Finish mobile Mission.

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </header> 
       <article class="features">
         <h3 class="head">Features & Usage</h3>
-        <h4 class="subhead">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
+        <h4 class="subhead u-txt-c">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
         <section class="feature-duo img-left">
           <img src="img/img-placeholder.png" alt="" class="img-feature">
           <div class="txt-feature">
@@ -125,8 +125,12 @@
       <article class="mission">
         <img src="img/img-dark-placeholder.png" alt="" class="img-mission">
         <div class="txt-mission">
-          <h3 class="head">Developing Inclusive Design Habits 💎</h3>
-          <h4 class="subhead">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>  
+          <h3 class="head">Why Choose Cluse?</h3>
+          <h4 class="subhead u-txt-l">The path to accessibility begins in the designer’s Sketch file.  Cluse aims to develop inclusive design habits for the average Sketch user. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tortor leo, posuere sed ipsum condimentum, ornare eleifend erat. Duis ut est mollis, convallis leo eu, gravida diam. Ut fermentum massa a tincidunt gravida. Thus, Cluse was born to fill the void.
+          </h4>  
+          <div class="link-wrapper">
+            <a href="" class="link">Read About Cluse’s Conception <span class="u-blue">→</span></a>
+          </div>
         </div>
         </article>
       
