Complete markup for Footer

--- a/index.html
+++ b/index.html
@@ -133,6 +133,28 @@
           </div>
         </div>
         </article>
+        <article class="issue">
+                <h3 class="head">Report a Bug 🐞</h3>
+                <h4 class="subhead u-txt-c">If Cluse does not work the way you’d like it to or if you find a bug, post an issue on the Github repostitory.
+                </h4>  
+                <div class="link-wrapper">
+                  <a href="" class="link">Report an Issue on Github <span class="u-blue">→</span></a>
+                </div>
+        </article>
+        <footer>
+          <p>Created by Yana Gevorgyan</p>
+          <div class="ygis-copyright">
+            <img src="" alt="" class="logo-ygis">
+            <p class="footer-copyright">© Copyright 2019 · yg.is</p>
+          </div>
+          <ul>
+            <li><a href="">Hire Me ✨</a></li>
+            <li><a href="">Features</a></li>
+            <li><a href="">Documentation</a></li>
+            <li><a href="">Support</a></li>
+            <li><a href="">Mission</a></li>
+          </ul>
+        </footer>
       
    
 </body>
