--- a/index.html
+++ b/index.html
@@ -142,18 +142,19 @@
                 </div>
         </article>
         <footer>
-          <p>Created by Yana Gevorgyan</p>
           <div class="ygis-copyright">
-            <img src="" alt="" class="logo-ygis">
+            <img src="/img/ygis-black.svg" alt="" class="logo-ygis">
             <p class="footer-copyright">© Copyright 2019 · yg.is</p>
+            <p class="footer-copyright createdby-desktop">Created by Yana Gevorgyan</p>
           </div>
-          <ul>
-            <li><a href="">Hire Me ✨</a></li>
-            <li><a href="">Features</a></li>
-            <li><a href="">Documentation</a></li>
-            <li><a href="">Support</a></li>
-            <li><a href="">Mission</a></li>
+          <ul class="footer-links">
+            <li>✨<a class="footer-link" href="">Hire Me</a></li>
+            <li><a class="footer-link" href="">Features</a></li>
+            <li><a class="footer-link" href="">Documentation</a></li>
+            <li><a class="footer-link" href="">Support</a></li>
+            <li><a class="footer-link" href="">Mission</a></li>
           </ul>
+          <p class="footer-copyright createdby">Created by Yana Gevorgyan</p>
         </footer>
       
    
