Add animated scroll-anchors in js.

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="img/favicon.png" />
     <title>Cluse — Sketch Plugin</title>
 </head>
 <body>
     <nav class="desktop">
       
-      <a href="#">Features</a>
-      <a href="#">Mission</a>
-      <a href="#">Support</a>
+      <a href="#section1">Features</a>
+      <a href="#section2">Mission</a>
+      <a href="#section3">Support</a>
       <a href="#">Documentation</a>
       </nav>
       <div class="logopack">
@@ -24,9 +25,9 @@
       <nav class="mobile">
         <button>Toggle</button>
         <div>
-          <a href="#">Features</a>
-          <a href="#">Mission</a>
-          <a href="#">Support</a>
+          <a href="#section1">Features</a>
+          <a href="#section2">Mission</a>
+          <a href="#section3">Support</a>
           <a href="#">Documentation</a>
         </div>
       </nav>
@@ -83,7 +84,7 @@
           </div>  
       </div>
     </header> 
-      <article class="features">
+      <article id="section1"  class="features">
         <h3 class="head">Features & Usage</h3>
         <h4 class="subhead u-txt-c">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
         <section class="feature-duo img-left">
@@ -122,7 +123,7 @@
               </div>
         </section>
       </article>
-      <article class="mission">
+      <article id="section2"  class="mission">
         <img src="img/img-dark-placeholder.png" alt="" class="img-mission">
         <div class="txt-mission">
           <h3 class="head">Why Choose Cluse?</h3>
@@ -133,7 +134,7 @@
           </div>
         </div>
         </article>
-        <article class="issue">
+        <article id="section3" class="issue">
                 <h3 class="head">Report a Bug 🐞</h3>
                 <h4 class="subhead u-txt-c">If Cluse does not work the way you’d like it to or if you find a bug, post an issue on the Github repostitory.
                 </h4>  
@@ -149,10 +150,10 @@
           </div>
           <ul class="footer-links">
             <li>✨<a class="footer-link" href="">Hire Me</a></li>
-            <li><a class="footer-link" href="">Features</a></li>
             <li><a class="footer-link" href="">Documentation</a></li>
-            <li><a class="footer-link" href="">Support</a></li>
-            <li><a class="footer-link" href="">Mission</a></li>
+            <li><a class="footer-link" href="#section1">Features</a></li>
+            <li><a class="footer-link" href="#section2">Mission</a></li>
+            <li><a class="footer-link" href="#section3">Supporta</a></li>
           </ul>
           <p class="footer-copyright createdby">Created by Yana Gevorgyan</p>
         </footer>
