--- a/index.html
+++ b/index.html
@@ -165,4 +165,6 @@
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
   <script src="js/autoscroll.js"></script>
+  <script src="js/contrast.js"></script>
+  <script src="js/nav.js"></script>
 </html>
