Make header fixed.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     <title>Cluse — Sketch Plugin</title>
 </head>
 <body>
+  <div class="nav-wrapper">
     <nav class="desktop">
       
       <a href="#section1">Features</a>
       <a href="#section2">Mission</a>
       <a href="#section3">Support</a>
       <a href="#">Documentation</a>
-      </nav>
-      <div class="logopack">
+    </nav>
+    <div class="logopack">
           <img src="img/logo.svg" alt="" class="logo">
           <h4 class="logotype">Sketch Cluse</h4>
-        </div>
+    </div>
+  </div>
       <nav class="mobile">
         <button>Toggle</button>
         <div>
