Hide header on scroll-down.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Cluse — Sketch Plugin</title>
 </head>
 <body>
-  <div class="nav-wrapper">
+  <div class="nav-down nav-wrapper">
     <nav class="desktop">
       
       <a href="#section1">Features</a>
@@ -35,7 +35,7 @@
       </nav>
   <header class="hero">
       <article>
-          <h1 class="lead">Design Inclusively</h1>
+          <h1 class="lead">Sketch Inclusively</h1>
           <p class="leadline">Cluse is the most comprehensive color contrast plugin for Sketch that ensures your products are WCAG 2.0 accessible. Free of charge.</p>
           <div class="btn-wrapper"> 
             <button class="btn-dl">Download Cluse</button>
