Incorporate broken contrast.js

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <aside class="rater">
         <section class="rater-wrapper">
         <h2 id="#WCAG" class="rating">AA</h2>
-        <img id="#imgPass" src="img/check.svg" alt="" class="pass">
+        <img id="#imgPass" src="img/check.svg" alt="">
       </section>
       <form autocomplete="off" id ="contrastForm" class="color-settings">
           <fieldset class="col-left color-background">
