Download button initial style.

--- a/index.html
+++ b/index.html
@@ -65,21 +65,24 @@
         <img src="img/dot-w.svg" alt="" class="dot dot-aligner">
       </div>
       </aside>
-      <div class="dot-divider">
-        <div class="dot-white">
-          <img src="img/dot-w.svg" alt="" class="dot dd1">
-          <img src="img/dot-w.svg" alt="" class="dot dd2 dot-aligner">
-          <img src="img/dot-w.svg" alt="" class="dot dd3">
-        </div>  
-        <div class="dot-blue">
-            <img src="img/dot-b.svg" alt="" class="dot dd1">
-            <img src="img/dot-b.svg" alt="" class="dot dd2 dot-aligner">
-            <img src="img/dot-b.svg" alt="" class="dot dd3">
-          </div>  
-      </div>
+<div class="dot-divider">
+  <div class="dot-white">
+    <img src="img/dot-w.svg" alt="" class="dot dd1">
+    <img src="img/dot-w.svg" alt="" class="dot dd2 dot-aligner">
+    <img src="img/dot-w.svg" alt="" class="dot dd3">
+  </div>  
+</div>
+
+<div class="dot-divider shoo">
+  <div class="dot-blue">
+      <img src="img/dot-b.svg" alt="" class="dot dd1">
+      <img src="img/dot-b.svg" alt="" class="dot dd2 dot-aligner">
+      <img src="img/dot-b.svg" alt="" class="dot dd3">
+    </div>  
+</div>
     </header> 
       <article id="section1"  class="features">
-        <h3 class="head">Features & Usage</h3>
+        <h3 class="head u-margin-top-150">Features & Usage</h3>
         <h4 class="subhead u-txt-c">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
         <section class="feature-duo img-left">
           <img src="img/img-placeholder.png" alt="" class="img-feature">
