--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/button.css">
     <link rel="shortcut icon" href="img/favicon.png" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Cluse — Sketch Plugin</title>
 </head>
 <body>
+    <script>
+        document.body.className = 'fade';
+      </script>
   <div id="ui" class="nav-down nav-wrapper">
     <nav class="desktop">
       
@@ -170,6 +174,10 @@
       
    
 </body>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+    AOS.init();
+  </script>
 <script
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
