--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </nav>
   <header id="big" class="hero">
-      <article>
+      <article data-aos="fade-right" data-aos-offset="600" data-aos-easing="ease-in-sine">
           <h1 id="lead" class="lead">Sketch Inclusively</h1>
           <p id="leadline" class="leadline">Cluse is the most comprehensive color contrast plugin for Sketch that ensures your products are WCAG 2.0 accessible. Free of charge.</p>
           <div class="btn-wrapper"> 
@@ -61,7 +61,7 @@
         <p id="underbtn" class="underbtn"><span class="mac-logo">  </span>macOS 10.11 or above • Sketch 40 or above required
         </p>
       </article>
-      <aside class="rater">
+      <aside data-aos="fade-left" data-aos-offset="600" data-aos-easing="ease-in-sine" class="rater">
         <section class="rater-wrapper">
         <h2 id="WCAG" class="rating">AA</h2>
         <img id="imgPass" src="img/check.svg" alt="">
@@ -98,38 +98,38 @@
     </div>  
 </div>
     </header> 
-      <article id="section1"  class="features">
-        <h3 class="head u-margin-top-150">Features & Usage</h3>
-        <h4 class="subhead u-txt-c">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
-        <section class="feature-duo img-left">
+      <article id="section1" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine" class="features">
+        <h3 data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine"  class="head u-margin-top-150">Features & Usage</h3>
+        <h4 data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine"  class="subhead u-txt-c">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
+        <section data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="feature-duo img-left">
           <img src="img/img-placeholder.png" alt="" class="img-feature">
           <div class="txt-feature">
             <h5 class="flag">Test Two Layers at a Time</h5>
             <p class="txt-flag">Select a text layer and a shape and run Cluse.</p>
           </div>
         </section>
-        <section class="feature-duo img-right">
+        <section data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="feature-duo img-right">
             <img src="img/img-placeholder.png" alt="" class="img-feature">
             <div class="txt-feature">
               <h5 class="flag">Adjust Your Color Contrast</h5>
               <p class="txt-flag">Sometimes that AAA is just a few shades away.</p>
             </div>
         </section>
-        <section class="feature-duo img-left">
+        <section data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="feature-duo img-left">
               <img src="img/img-placeholder.png" alt="" class="img-feature">
               <div class="txt-feature">
                 <h5 class="flag">Live Preview</h5>
                 <p class="txt-flag">Update designs automatically as you adjust your colors.</p>
               </div>
         </section>
-        <section class="feature-duo img-right">
+        <section data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" class="feature-duo img-right">
             <img src="img/img-placeholder.png" alt="" class="img-feature">
             <div class="txt-feature">
               <h5 class="flag">Font Size Recognition</h5>
               <p class="txt-flag">Cluse adjusts its WCAG rating based on text size and weight. </p>
             </div>
         </section>
-        <section class="feature-duo img-left">
+        <section data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="feature-duo img-left">
               <img src="img/img-placeholder.png" alt="" class="img-feature">
               <div class="txt-feature">
                 <h5 class="flag">Easily Revert Back</h5>
@@ -137,7 +137,7 @@
               </div>
         </section>
       </article>
-      <article id="section2"  class="mission">
+      <article id="section2" data-aos="fade-up" data-aos-offset="400" data-aos-easing="ease-in-sine"  class="mission">
         <img src="img/img-dark-placeholder.png" alt="" class="img-mission">
         <div class="txt-mission">
           <h3 class="head">Why Choose Cluse?</h3>
@@ -148,7 +148,7 @@
           </div>
         </div>
         </article>
-        <article id="section3" class="issue">
+        <article id="section3" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine"  class="issue">
                 <h3 class="head">Report a Bug 🐞</h3>
                 <h4 class="subhead u-txt-c">If Cluse does not work the way you’d like it to or if you find a bug, post an issue on the Github repostitory.
                 </h4>  
@@ -156,7 +156,7 @@
                   <a href="" class="link">Report an Issue on Github <span class="u-blue">→</span></a>
                 </div>
         </article>
-        <footer>
+        <footer data-aos="fade-up" data-aos-easing="ease-in-sine"  >
           <div class="ygis-copyright">
             <img src="/img/ygis-black.svg" alt="" class="logo-ygis">
             <p class="footer-copyright">© Copyright 2019 · yg.is</p>
