--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
+    <!--CSS Spinner-->
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/button.css">
@@ -13,9 +14,7 @@
     <title>Cluse — Sketch Plugin</title>
 </head>
 <body>
-    <script>
-        document.body.className = 'fade';
-      </script>
+    <div class="se-pre-con"></div>
   <div id="ui" class="nav-down nav-wrapper">
     <nav class="desktop">
       
@@ -171,25 +170,33 @@
           </ul>
           <p class="footer-copyright createdby">Created by Yana Gevorgyan</p>
         </footer>
+        <script
+        src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous"></script>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script>
+          AOS.init();
+        </script>
       
-   
+        <script src="js/autoscroll.js"></script>
+        <script src="js/contrast.js"></script>
+        <script>
+          function initialize() {
+            b = '#0A7FFF', f = '#FFFFFF';
+            update();
+          }
+        </script>
+      <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js"></script>
+        <script src="js/nav.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+
+    <script>
+           $(window).on('load', function() {
+        // Animate loader off screen
+        $(".se-pre-con").fadeOut("slow");;
+    });
+          </script>
 </body>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-    AOS.init();
-  </script>
-<script
-  src="https://code.jquery.com/jquery-3.4.1.js"
-  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-  crossorigin="anonymous"></script>
-  <script src="js/autoscroll.js"></script>
-  <script src="js/contrast.js"></script>
-  <script>
-		function initialize() {
-			b = '#0A7FFF', f = '#FFFFFF';
-			update();
-		}
-  </script>
-<script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js"></script>
-  <script src="js/nav.js"></script>
+
 </html>
