--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     </div>  
 </div>
     </header> 
-      <article id="section1" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine" class="features">
-        <h3 data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine"  class="head u-margin-top-150">Features & Usage</h3>
-        <h4 data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine"  class="subhead u-txt-c">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
+      <article id="section1" data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine" class="features">
+        <h3 data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine"  class="head u-margin-top-150">Features & Usage</h3>
+        <h4 data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine"  class="subhead u-txt-c">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
         <section data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="feature-duo img-left">
           <img src="img/img-placeholder.png" alt="" class="img-feature">
           <div class="txt-feature">
@@ -106,28 +106,28 @@
             <p class="txt-flag">Select a text layer and a shape and run Cluse.</p>
           </div>
         </section>
-        <section data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" class="feature-duo img-right">
+        <section data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine" class="feature-duo img-right">
             <img src="img/img-placeholder.png" alt="" class="img-feature">
             <div class="txt-feature">
               <h5 class="flag">Adjust Your Color Contrast</h5>
               <p class="txt-flag">Sometimes that AAA is just a few shades away.</p>
             </div>
         </section>
-        <section data-aos="fade-left" data-aos-offset="200" data-aos-easing="ease-in-sine" class="feature-duo img-left">
+        <section data-aos="fade-left" data-aos-offset="100" data-aos-easing="ease-in-sine" class="feature-duo img-left">
               <img src="img/img-placeholder.png" alt="" class="img-feature">
               <div class="txt-feature">
                 <h5 class="flag">Live Preview</h5>
                 <p class="txt-flag">Update designs automatically as you adjust your colors.</p>
               </div>
         </section>
-        <section data-aos="fade-right" data-aos-offset="200" data-aos-easing="ease-in-sine" class="feature-duo img-right">
+        <section data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine" class="feature-duo img-right">
             <img src="img/img-placeholder.png" alt="" class="img-feature">
             <div class="txt-feature">
               <h5 class="flag">Font Size Recognition</h5>
               <p class="txt-flag">Cluse adjusts its WCAG rating based on text size and weight. </p>
             </div>
         </section>
-        <section data-aos="fade-left" data-aos-offset="200" data-aos-easing="ease-in-sine" class="feature-duo img-left">
+        <section data-aos="fade-left" data-aos-offset="100" data-aos-easing="ease-in-sine" class="feature-duo img-left">
               <img src="img/img-placeholder.png" alt="" class="img-feature">
               <div class="txt-feature">
                 <h5 class="flag">Easily Revert Back</h5>
@@ -135,7 +135,7 @@
               </div>
         </section>
       </article>
-      <article id="section2" data-aos="fade-up" data-aos-offset="400" data-aos-easing="ease-in-sine"  class="mission">
+      <article id="section2" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine"  class="mission">
         <img src="img/img-dark-placeholder.png" alt="" class="img-mission">
         <div class="txt-mission">
           <h3 class="head">Why Choose Cluse?</h3>
@@ -146,7 +146,7 @@
           </div>
         </div>
         </article>
-        <article id="section3" data-aos="fade-up" data-aos-offset="300" data-aos-easing="ease-in-sine"  class="issue">
+        <article id="section3" data-aos="fade-up" data-aos-offset="2Sl00" data-aos-easing="ease-in-sine"  class="issue">
                 <h3 class="head">Report a Bug 🐞</h3>
                 <h4 class="subhead u-txt-c">If Cluse does not work the way you’d like it to or if you find a bug, post an issue on the Github repostitory.
                 </h4>  
