Add hover effect for link.

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <h4 class="subhead u-txt-l">The path to accessibility begins in the designer’s Sketch file. Cluse aims to develop inclusive design habits for the average Sketch user. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tortor leo, posuere sed ipsum condimentum, ornare eleifend erat. Duis ut est mollis, convallis leo eu, gravida diam. Ut fermentum massa a tincidunt gravida. Thus, Cluse was born to fill the void.
           </h4>  
           <div class="link-wrapper">
-            <a href="" class="link">Read About Cluse’s Conception <span class="u-blue">→</span></a>
+            <a href="" class="link"> Read About Cluse’s Conception <span class="u-blue link-arrow">→</span></a>
           </div>
         </div>
         </article>
@@ -151,7 +151,7 @@
                 <h4 class="subhead u-txt-c">If Cluse does not work the way you’d like it to or if you find a bug, post an issue on the Github repostitory.
                 </h4>  
                 <div class="link-wrapper">
-                  <a href="" class="link">Report an Issue on Github <span class="u-blue">→</span></a>
+                  <a href="" class="link">Report an Issue on Github <span class="u-blue link-arrow">→</span></a>
                 </div>
         </article>
         <footer data-aos="fade-up" data-aos-easing="ease-in-sine"  >
