Fixed typo. Supporta -> Support.

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <li><a class="footer-link" href="">Documentation</a></li>
             <li><a class="footer-link" href="#section1">Features</a></li>
             <li><a class="footer-link" href="#section2">Mission</a></li>
-            <li><a class="footer-link" href="#section3">Supporta</a></li>
+            <li><a class="footer-link" href="#section3">Support</a></li>
           </ul>
           <p class="footer-copyright createdby">Created by Yana Gevorgyan</p>
         </footer>
