Eliminate AOS for Features.

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     </div>  
 </div>
     </header> 
-      <article id="section1" data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine" class="features">
-        <h3 data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine"  class="head u-margin-top-150">Features & Usage</h3>
+      <article id="section1" class="features">
+        <h3  class="head u-margin-top-100">Features & Usage</h3>
         <h4 data-aos="fade-up" data-aos-offset="100" data-aos-easing="ease-in-sine"  class="subhead u-txt-c">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
         <section data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="feature-duo img-left">
           <img src="img/img-placeholder.png" alt="" class="img-feature">
@@ -106,7 +106,7 @@
             <p class="txt-flag">Select a text layer and a shape and run Cluse.</p>
           </div>
         </section>
-        <section data-aos="fade-right" data-aos-offset="100" data-aos-easing="ease-in-sine" class="feature-duo img-right">
+        <section data-aos="fade-right" data-aos-offset="50" data-aos-easing="ease-in-sine" class="feature-duo img-right">
             <img src="img/img-placeholder.png" alt="" class="img-feature">
             <div class="txt-feature">
               <h5 class="flag">Adjust Your Color Contrast</h5>
