--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <p id="underbtn" class="underbtn"><span class="mac-logo">  </span>macOS 10.11 or above • Sketch 40 or above required
         </p>
       </article>
-      <aside data-aos="fade-left" data-aos-offset="600" data-aos-easing="ease-in-sine" class="rater">
+      <aside  class="rater">
         <section class="rater-wrapper">
         <h2 id="WCAG" class="rating">AA</h2>
         <img id="imgPass" src="img/check.svg" alt="">
@@ -188,7 +188,7 @@
         </script>
       <script src="https://cdn.jsdelivr.net/npm/gsap@3.0.1/dist/gsap.min.js"></script>
         <script src="js/nav.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
 
     <script>
            $(window).on('load', function() {
