--- a/index.html
+++ b/index.html
@@ -53,8 +53,7 @@
               </div>
           </a>
 
-
-            <button class="btn-git" aria-label="github button"></button>
+            <button onclick=" window.open('https://github.com/ygev/cluse','_blank')" class="btn-git" aria-label="github button"></button>
           </div>
         <p id="underbtn" class="underbtn"><span class="mac-logo">  </span>macOS 10.11 or above • Sketch 40 or above required
         </p>
@@ -161,8 +160,8 @@
             <p class="footer-copyright createdby-desktop">Created by Yana Gevorgyan</p>
           </div>
           <ul class="footer-links">
-            <li>✨<a class="footer-link" href="">Hire Me</a></li>
-            <li><a class="footer-link" href="">Documentation</a></li>
+            <li>✨<a class="footer-link" href="https://www.yg.is/about">Hire Me</a></li>
+            <li><a class="footer-link" href="https://www.yg.is/cluse">Documentation</a></li>
             <li><a class="footer-link" href="#section1">Features</a></li>
             <li><a class="footer-link" href="#section2">Mission</a></li>
             <li><a class="footer-link" href="#section3">Support</a></li>
