Add styling to button at 320px.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
       </nav>
   <header id="big" class="hero">
-      <article data-aos="fade-right" data-aos-offset="600" data-aos-easing="ease-in-sine">
+      <article>
           <h1 id="lead" class="lead">Sketch Inclusively</h1>
           <p id="leadline" class="leadline">Cluse is the most comprehensive color contrast plugin for Sketch that ensures your products are WCAG 2.0 accessible. Free of charge.</p>
           <div class="btn-wrapper"> 
