Add images to Features & Mission.

--- a/index.html
+++ b/index.html
@@ -99,35 +99,35 @@
         <h3  class="head u-margin-top-100">Features & Usage</h3>
         <h4 data-aos="fade-up" data-aos-easing="ease-in-sine"  class="subhead u-txt-c">Working seamlessly with Sketch, Cluse empowers you to quickly test and adjust the color contrast of your designs without external resources.</h4>
         <section data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" class="feature-duo img-left">
-          <img src="img/img-placeholder.png" alt="" class="img-feature">
+          <img src="img/select.gif" alt="" class="img-feature">
           <div class="txt-feature">
             <h5 class="flag">Test Two Layers at a Time</h5>
             <p class="txt-flag">Select a text layer and a shape and run Cluse.</p>
           </div>
         </section>
         <section data-aos="fade-right" data-aos-easing="ease-in-sine" class="feature-duo img-right">
-            <img src="img/img-placeholder.png" alt="" class="img-feature">
+            <img src="img/adjust.gif" alt="" class="img-feature">
             <div class="txt-feature">
               <h5 class="flag">Adjust Your Color Contrast</h5>
               <p class="txt-flag">Sometimes that AAA is just a few shades away.</p>
             </div>
         </section>
         <section data-aos="fade-left" data-aos-easing="ease-in-sine" class="feature-duo img-left">
-              <img src="img/img-placeholder.png" alt="" class="img-feature">
+              <img src="img/live.gif" alt="" class="img-feature">
               <div class="txt-feature">
                 <h5 class="flag">Live Preview</h5>
-                <p class="txt-flag">Update designs automatically as you adjust your colors.</p>
+                <p class="txt-flag">Designs update as you adjust your colors.</p>
               </div>
         </section>
         <section data-aos="fade-right" data-aos-easing="ease-in-sine" class="feature-duo img-right">
-            <img src="img/img-placeholder.png" alt="" class="img-feature">
+            <img src="img/swap.gif" alt="" class="img-feature">
             <div class="txt-feature">
-              <h5 class="flag">Font Size Recognition</h5>
-              <p class="txt-flag">Cluse adjusts its WCAG rating based on text size and weight. </p>
+              <h5 class="flag">Swap Colors</h5>
+              <p class="txt-flag">Research suggests that inverted colors can be easier to read. </p>
             </div>
         </section>
         <section data-aos="fade-left" data-aos-easing="ease-in-sine" class="feature-duo img-left">
-              <img src="img/img-placeholder.png" alt="" class="img-feature">
+              <img src="img/undo.gif" alt="" class="img-feature">
               <div class="txt-feature">
                 <h5 class="flag">Easily Revert Back</h5>
                 <p class="txt-flag">Don’t like the new color? Undo and explore more options.</p>
@@ -135,22 +135,22 @@
         </section>
       </article>
       <article id="section2" data-aos="fade-up" data-aos-easing="ease-in-sine"  class="mission">
-        <img src="img/img-dark-placeholder.png" alt="" class="img-mission">
+        <img src="img/whycluse.svg" alt="" class="img-mission">
         <div class="txt-mission">
           <h3 class="head">Why Choose Cluse?</h3>
-          <h4 class="subhead u-txt-l">The path to accessibility begins in the designer’s Sketch file. Cluse aims to develop inclusive design habits for the average Sketch user. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer tortor leo, posuere sed ipsum condimentum, ornare eleifend erat. Duis ut est mollis, convallis leo eu, gravida diam. Ut fermentum massa a tincidunt gravida. Thus, Cluse was born to fill the void.
+          <h4 class="subhead u-txt-l">The path to accessibility begins in the designer’s Sketch file. Cluse aims to develop inclusive design habits for the average Sketch user. However, there is no optimal way to incorporate them all into the workflow. From my interviews with interns and full-time designers, the most common manner for verifying WCAG color contrast compliance is manually pasting in HEX codes to online tools. Thus, the idea for Cluse was born.
           </h4>  
-          <div class="link-wrapper">
+          <!-- <div class="link-wrapper">
             <a href="" class="link"> Read About Cluse’s Conception <span class="u-blue link-arrow">→</span></a>
-          </div>
+          </div> -->
         </div>
         </article>
         <article id="section3" data-aos="fade-up" data-aos-easing="ease-in-sine"  class="issue">
                 <h3 class="head">Report a Bug 🐞</h3>
-                <h4 class="subhead u-txt-c">If Cluse does not work the way you’d like it to or if you find a bug, post an issue on the Github repostitory.
+                <h4 class="subhead u-txt-c">If Cluse does not work the way you’d like it to or if you find a bug, <br> post an issue on the Github repostitory.
                 </h4>  
                 <div class="link-wrapper">
-                  <a href="" class="link">Report an Issue on Github <span class="u-blue link-arrow">→</span></a>
+                  <a href="https://github.com/ygev/cluse/issues" class="link">Report an Issue on Github <span class="u-blue link-arrow">→</span></a>
                 </div>
         </article>
         <footer data-aos="fade-up" data-aos-easing="ease-in-sine"  >
