--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
         </article>
         <article id="section3" data-aos="fade-up" data-aos-easing="ease-in-sine"  class="issue">
-                <h3 class="head">Report a Bug 🐞</h3>
+                <h3 class="head">Report a Bug</h3>
                 <h4 class="subhead u-txt-c">If Cluse does not work the way you’d like it to or if you find a bug, <br> post an issue on the Github repostitory.
                 </h4>  
                 <div class="link-wrapper">
@@ -160,11 +160,8 @@
             <p class="footer-copyright createdby-desktop">Created by Yana Gevorgyan</p>
           </div>
           <ul class="footer-links">
-            <li>✨<a class="footer-link" href="https://www.yg.is/about">Hire Me</a></li>
+            <li><a class="footer-link" href="https://www.yg.is/about">Hire Me</a></li>
             <li><a class="footer-link" href="https://www.yg.is/cluse">Documentation</a></li>
-            <li><a class="footer-link" href="#section1">Features</a></li>
-            <li><a class="footer-link" href="#section2">Mission</a></li>
-            <li><a class="footer-link" href="#section3">Support</a></li>
           </ul>
           <p class="footer-copyright createdby">Created by Yana Gevorgyan</p>
         </footer>
