--- a/index.html
+++ b/index.html
@@ -153,17 +153,12 @@
                   <a href="https://github.com/ygev/cluse/issues" class="link">Report an Issue on Github <span class="u-blue link-arrow">→</span></a>
                 </div>
         </article>
-        <footer data-aos="fade-up" data-aos-easing="ease-in-sine"  >
-          <div class="ygis-copyright">
-            <img src="/img/ygis-black.svg" alt="" class="logo-ygis">
-            <p class="footer-copyright">© Copyright 2019 · yg.is</p>
-            <p class="footer-copyright createdby-desktop">Created by Yana Gevorgyan</p>
-          </div>
+        <footer data-aos="fade-up" data-aos-easing="ease-in-sine">
           <ul class="footer-links">
             <li><a class="footer-link" href="https://www.yg.is/about">Hire Me</a></li>
             <li><a class="footer-link" href="https://www.yg.is/cluse">Documentation</a></li>
           </ul>
-          <p class="footer-copyright createdby">Created by Yana Gevorgyan</p>
+          <p class="footer-copyright">© Yana Gevorgyan · <a class="footer-link" href="yg.is">yg.is</a></p> 
         </footer>
         <script
         src="https://code.jquery.com/jquery-3.4.1.js"
