Add Google Verification.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/button.css">
     <link rel="shortcut icon" href="img/favicon.png" />
+    <meta name="google-site-verification" content="EPyvhbnawiJk1Wi5tOncjspOL2lrqtcwqV850V4QFys" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Cluse — Sketch Plugin</title>
 </head>
