--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/button.css">
     <link rel="shortcut icon" href="img/favicon.png" />
     <meta name="google-site-verification" content="EPyvhbnawiJk1Wi5tOncjspOL2lrqtcwqV850V4QFys" />
+    <meta name="description" content="Cluse is a Sketch Plugin that allows you to test the color contrast of your design for accessibility.">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Cluse — Sketch Plugin</title>
 </head>
