Add aria labels to buttons.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </div>
   </div>
       <nav class="mobile">
-        <button>Toggle</button>
+        <button aria-label="Menu">Toggle</button>
         <div>
           <a href="#section1">Features</a>
           <a href="#section2">Mission</a>
@@ -44,7 +44,7 @@
           <p id="leadline" class="leadline">Cluse is the most comprehensive color contrast plugin for Sketch that ensures your products are WCAG 2.0 accessible. Free of charge.</p>
           <div class="btn-wrapper"> 
            
-            <a href="" class="button btn-dl">
+            <a aria-label="Download" href="" class="button btn-dl">
               <ul>
                   <li>&#68;ownload Cluse</li>
                   <li>&#68;ownloading Cluse</li>
@@ -55,7 +55,7 @@
               </div>
           </a>
 
-            <button onclick=" window.open('https://github.com/ygev/cluse','_blank')" class="btn-git" aria-label="github button"></button>
+            <button aria-label="See Github Repository" onclick="window.open('https://github.com/ygev/cluse','_blank')" class="btn-git" aria-label="github button"></button>
           </div>
         <p id="underbtn" class="underbtn"><span class="mac-logo">  </span>macOS 10.11 or above • Sketch 40 or above required
         </p>
