Add aria labels to inputs.

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       <form autocomplete="off" id ="contrastForm" class="color-settings">
           <div class="color-background">
             <div class="color-slider">
-                <input id="bLightness" class="slider-input hex-value" type="range" min="5" value="45" max="95" step="1">
+                <input aria-label="Lightness Slider" id="bLightness" class="slider-input hex-value" type="range" min="5" value="45" max="95" step="1">
             </div>
             <div class="input-wrapper">
-              <input id="bHex" maxlength="7" class="color-input" type="text" name="head"
+              <input aria-label="Background Color Hex Value" id="bHex" maxlength="7" class="color-input" type="text" name="head"
             value="#006CF4">
             </div>
           </div>
