Fix links and add hover to slider.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a class="nav-item" href="#section1">Features</a>
       <a class="nav-item" href="#section2">Mission</a>
       <a class="nav-item" href="#section3">Support</a>
-      <a class="nav-item" href="#">Documentation</a>
+      <a class="nav-item" target="_blank" href="https://github.com/ygev/cluse">Documentation</a>
     </nav>
     <div class="logopack">
           <img src="img/logo.svg" alt="" class="logo">
@@ -35,7 +35,7 @@
           <a href="#section1">Features</a>
           <a href="#section2">Mission</a>
           <a href="#section3">Support</a>
-          <a href="#">Documentation</a>
+          <a target="_blank" href="https://github.com/ygev/cluse">Documentation</a>
         </div>
       </nav>
   <header id="big" class="hero">
@@ -157,8 +157,8 @@
         </article>
         <footer data-aos="fade-up" data-aos-easing="ease-in-sine">
           <ul class="footer-links">
-            <li><a class="footer-link" href="https://www.yg.is/about">Hire Me</a></li>
-            <li><a class="footer-link" href="https://www.yg.is/cluse">Documentation</a></li>
+            <li><a class="footer-link" target="_blank" href="https://www.yg.is">Hire Me</a></li>
+            <li><a class="footer-link" target="_blank" href="https://github.com/ygev/cluse">Documentation</a></li>
           </ul>
           <p class="footer-copyright">© Yana Gevorgyan · <a class="footer-link" href="yg.is">yg.is</a></p> 
         </footer>
